--- a/templates/commandbasedskeleton/manifest.json
+++ b/templates/commandbasedskeleton/manifest.json
@@ -1,5 +1,5 @@
 {
-    "files": [
+    "build_files": [
         ".vscode/launch.json",
         ".vscode/settings.json",
         ".wpilib/wpilib_preferences.json",
@@ -11,5 +11,10 @@
         "gradlew",
         "gradlew.bat",
         "settings.gradle"
+    ],
+    "code_files": [
+        "Main.java",
+        "Robot.java",
+        "RobotContainer.java"
     ]
 }
