Add `WPILibNewCommand.json` to `manifest.json`

--- a/templates/commandbasedskeleton/manifest.json
+++ b/templates/commandbasedskeleton/manifest.json
@@ -5,6 +5,7 @@
         ".wpilib/wpilib_preferences.json",
         "gradle/wrapper/gradle-wrapper.jar",
         "gradle/wrapper/gradle-wrapper.properties",
+        "vendordeps/WPILibNewCommands.json",
         ".gitignore",
         "WPILib-License.md",
         "build.gradle",
